:sparkles: crawler done
